--- a/dein/toml/dein.toml
+++ b/dein/toml/dein.toml
@@ -25,6 +25,9 @@ repo    = 'vim-airline/vim-airline'
 depends = ['/vim-airline-themes']
 
 [[plugins]]
+repo = 'tpope/vim-fugitive'
+
+[[plugins]]
 repo = 'ryanoasis/vim-devicons'
 
 [[plugins]]
@@ -33,3 +36,5 @@ repo = 'preservim/nerdtree'
 [[plugins]]
 repo = 'Xuyuanp/nerdtree-git-plugin'
 
+[[plugins]]
+repo = 'tpope/vim-commentary'
