--- a/dein/toml/dein.toml
+++ b/dein/toml/dein.toml
@@ -34,6 +34,9 @@ repo = 'preservim/nerdtree'
 repo = 'Xuyuanp/nerdtree-git-plugin'
 
 [[plugins]]
+repo = 'airblade/vim-gitgutter'
+
+[[plugins]]
 repo = 'jistr/vim-nerdtree-tabs'
 
 [[plugins]]
@@ -41,3 +44,6 @@ repo = 'ryanoasis/vim-devicons'
 
 [[plugins]]
 repo = 'tpope/vim-commentary'
+
+[[plugins]]
+repo = 'bkad/CamelCaseMotion'
